Feature/fake netlify/standards form (#324)
* fix errors code form

* Minor fixes

* Fixes : yaml data from forms & id errors

* Formatting dates as date instead of string in _data/code

* Formatting dates as date instead of string in _data/logiciel

* Formatting dates as date instead of string in _data/normes

* Changed date to day from testing'

* Fix yamale errors

* Added administration form page and components

* fix build

* Changed name translation (value -> option) for better consistency

* Adding comment & yml format

* Added select widget

* Added select widget & updated documentation

* Added form for open standards

* Correction in form documentation

* Fix build errors

* Fixing conflicts

--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -264,6 +264,64 @@ code:
       en: The latest version
       fr: La dernière version
 
+# Standards form specifics
+standards:
+  Name:
+    title:
+      en: Name of the Standard
+      fr: Nom du standard
+    label:
+      en:
+        en: Name in English
+        fr: nom en anglais
+      fr:
+        en: Name in french
+        fr: Nom en français
+  SpecURL:
+    title:
+      en: URL of the specification
+      fr: Url de la spécification
+    label:
+      en:
+        en: English url
+        fr: Url anglais
+      fr:
+        en: French URL
+        fr: Url français
+  StandardCode:
+    title:
+      en: Code for the Standard
+      fr: Code du standard
+    label:
+      en: Code
+      fr: Code
+  StandardOrg:
+    title:
+      en: Name of the organisation supporting the standard
+      fr: Nom de l'organisation supportant le standard
+    label:
+      en: Name
+      fr: Nom
+  Reference:
+    title:
+      en: Reference for the standard
+      fr: Référence pour le standard
+    labels:
+      Url:
+        en:
+          en: URL for the reference in english
+          fr: Url de la référence en anglais
+        fr:
+          en: URL for the reference in french
+          fr: Url de la référence en français
+      Name:
+        en:
+          en: Name of the reference in english
+          fr: Nom de la référence en anglais
+        fr:
+          en: Name of the reference in french
+          fr: Nom de la référence en français
+
 # Admin form specifics
 admin:
   Name:
@@ -324,6 +382,3 @@ admin:
       yt:
         en: Yukon
         fr: Yukon
-
-# Software form specifics
-# ...
