--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -186,8 +186,12 @@ code:
       en: The name of the project.
       fr: Le nom du projet.
     label:
-      en: Enter a name to create a new project or select one to updated it.
-      fr: Entrez un nom pour créer un nouveau projet ou sélectionner un déjà existant pour le mettre à jour.
+      en:
+        en: The english name of the project (Enter an name to create a new project or select one to updated it)
+        fr: Le nom du projet en anglais
+      fr:
+        en: The name of the project in french
+        fr: Le nom du projet en français (Entrez un nom pour créer un nouveau projet ou sélectionner un déjà existant pour le mettre à jour)
   Organization:
     title:
       en: The English and French name of the organization or team to which the project belongs.
