--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -117,8 +117,8 @@ presets:
       fr: Niveau de gouvernement
     options:
       aboriginal:
-        en : Aboriginal
-        fr : Aborigène
+        en: Aboriginal
+        fr: autochtone
       federal:
         en: Federal
         fr: Fédéral
