update form.yml file: modify Autochtone to Aborigène

--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -118,7 +118,7 @@ presets:
     options:
       aboriginal:
         en: Aboriginal
-        fr: autochtone
+        fr: Aborigène
       federal:
         en: Federal
         fr: Fédéral
